Enhance mana handling by safely simulating insertions and extractions